// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalToolbar renders with account options closed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-toolbar pf-m-sticky pf-u-m-0"
        data-ouia-component-id="OUIA-Generated-Toolbar-2"
        data-ouia-component-type="PF4/Toolbar"
        data-ouia-safe="true"
        id="pf-random-id-1"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__item pf-u-display-flex"
            >
              <div
                class="pf-c-dropdown pf-u-display-flex"
                data-ouia-component-id="OUIA-Generated-Dropdown-2"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Toggle account actions"
                  class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                  data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pf-dropdown-toggle-id-1"
                  type="button"
                >
                  <span>
                    <img
                      alt="avatar"
                      class="pf-c-avatar"
                      src=""
                    />
                  </span>
                </button>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item pf-u-flex-1"
            >
              <div
                class="pf-c-text-input-group pf-c-search--main"
              >
                <div
                  class="pf-c-text-input-group__main pf-m-icon"
                >
                  <span
                    class="pf-c-text-input-group__text"
                  >
                    <span
                      class="pf-c-text-input-group__icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </span>
                    <input
                      aria-label="Search"
                      class="pf-c-text-input-group__text-input"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                aria-label="Add a contact"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-random-id-1-expandable-content-1"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <div
          class="pf-c-toolbar__content pf-m-hidden"
          hidden=""
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-toolbar pf-m-sticky pf-u-m-0"
      data-ouia-component-id="OUIA-Generated-Toolbar-2"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-1"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item pf-u-display-flex"
          >
            <div
              class="pf-c-dropdown pf-u-display-flex"
              data-ouia-component-id="OUIA-Generated-Dropdown-2"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toggle account actions"
                class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
                data-ouia-component-type="PF4/DropdownToggle"
                data-ouia-safe="true"
                id="pf-dropdown-toggle-id-1"
                type="button"
              >
                <span>
                  <img
                    alt="avatar"
                    class="pf-c-avatar"
                    src=""
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item pf-u-flex-1"
          >
            <div
              class="pf-c-text-input-group pf-c-search--main"
            >
              <div
                class="pf-c-text-input-group__main pf-m-icon"
              >
                <span
                  class="pf-c-text-input-group__text"
                >
                  <span
                    class="pf-c-text-input-group__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </span>
                  <input
                    aria-label="Search"
                    class="pf-c-text-input-group__text-input"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="Add a contact"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-1-expandable-content-1"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GlobalToolbar renders with account options open 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-toolbar pf-m-sticky pf-u-m-0"
        data-ouia-component-id="OUIA-Generated-Toolbar-1"
        data-ouia-component-type="PF4/Toolbar"
        data-ouia-safe="true"
        id="pf-random-id-0"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__item pf-u-display-flex"
            >
              <div
                class="pf-c-dropdown pf-m-expanded pf-u-display-flex"
                data-ouia-component-id="OUIA-Generated-Dropdown-1"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-label="Toggle account actions"
                  class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                  data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pf-dropdown-toggle-id-0"
                  type="button"
                >
                  <span>
                    <img
                      alt="avatar"
                      class="pf-c-avatar"
                      src=""
                    />
                  </span>
                </button>
                <ul
                  aria-labelledby="pf-dropdown-toggle-id-0"
                  class="pf-c-dropdown__menu"
                  role="menu"
                >
                  <li
                    role="none"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-dropdown__menu-item"
                      data-ouia-component-id="OUIA-Generated-DropdownItem-1"
                      data-ouia-component-type="PF4/DropdownItem"
                      data-ouia-safe="true"
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Logout
                    </button>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-dropdown__menu-item"
                      data-ouia-component-id="OUIA-Generated-DropdownItem-2"
                      data-ouia-component-type="PF4/DropdownItem"
                      data-ouia-safe="true"
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      About
                    </button>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item pf-u-flex-1"
            >
              <div
                class="pf-c-text-input-group pf-c-search--main"
              >
                <div
                  class="pf-c-text-input-group__main pf-m-icon"
                >
                  <span
                    class="pf-c-text-input-group__text"
                  >
                    <span
                      class="pf-c-text-input-group__icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </span>
                    <input
                      aria-label="Search"
                      class="pf-c-text-input-group__text-input"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                aria-label="Add a contact"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-random-id-0-expandable-content-0"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <div
          class="pf-c-toolbar__content pf-m-hidden"
          hidden=""
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-toolbar pf-m-sticky pf-u-m-0"
      data-ouia-component-id="OUIA-Generated-Toolbar-1"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-0"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item pf-u-display-flex"
          >
            <div
              class="pf-c-dropdown pf-m-expanded pf-u-display-flex"
              data-ouia-component-id="OUIA-Generated-Dropdown-1"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="Toggle account actions"
                class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                data-ouia-component-type="PF4/DropdownToggle"
                data-ouia-safe="true"
                id="pf-dropdown-toggle-id-0"
                type="button"
              >
                <span>
                  <img
                    alt="avatar"
                    class="pf-c-avatar"
                    src=""
                  />
                </span>
              </button>
              <ul
                aria-labelledby="pf-dropdown-toggle-id-0"
                class="pf-c-dropdown__menu"
                role="menu"
              >
                <li
                  role="none"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-dropdown__menu-item"
                    data-ouia-component-id="OUIA-Generated-DropdownItem-1"
                    data-ouia-component-type="PF4/DropdownItem"
                    data-ouia-safe="true"
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Logout
                  </button>
                </li>
                <li
                  role="none"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-dropdown__menu-item"
                    data-ouia-component-id="OUIA-Generated-DropdownItem-2"
                    data-ouia-component-type="PF4/DropdownItem"
                    data-ouia-safe="true"
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    About
                  </button>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item pf-u-flex-1"
          >
            <div
              class="pf-c-text-input-group pf-c-search--main"
            >
              <div
                class="pf-c-text-input-group__main pf-m-icon"
              >
                <span
                  class="pf-c-text-input-group__text"
                >
                  <span
                    class="pf-c-text-input-group__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </span>
                  <input
                    aria-label="Search"
                    class="pf-c-text-input-group__text-input"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="Add a contact"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-0-expandable-content-0"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GlobalToolbar renders with add contact modal closed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-toolbar pf-m-sticky pf-u-m-0"
        data-ouia-component-id="OUIA-Generated-Toolbar-4"
        data-ouia-component-type="PF4/Toolbar"
        data-ouia-safe="true"
        id="pf-random-id-3"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__item pf-u-display-flex"
            >
              <div
                class="pf-c-dropdown pf-u-display-flex"
                data-ouia-component-id="OUIA-Generated-Dropdown-4"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Toggle account actions"
                  class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                  data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pf-dropdown-toggle-id-3"
                  type="button"
                >
                  <span>
                    <img
                      alt="avatar"
                      class="pf-c-avatar"
                      src=""
                    />
                  </span>
                </button>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item pf-u-flex-1"
            >
              <div
                class="pf-c-text-input-group pf-c-search--main"
              >
                <div
                  class="pf-c-text-input-group__main pf-m-icon"
                >
                  <span
                    class="pf-c-text-input-group__text"
                  >
                    <span
                      class="pf-c-text-input-group__icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </span>
                    <input
                      aria-label="Search"
                      class="pf-c-text-input-group__text-input"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                aria-label="Add a contact"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-random-id-3-expandable-content-3"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <div
          class="pf-c-toolbar__content pf-m-hidden"
          hidden=""
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-toolbar pf-m-sticky pf-u-m-0"
      data-ouia-component-id="OUIA-Generated-Toolbar-4"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-3"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item pf-u-display-flex"
          >
            <div
              class="pf-c-dropdown pf-u-display-flex"
              data-ouia-component-id="OUIA-Generated-Dropdown-4"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toggle account actions"
                class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
                data-ouia-component-type="PF4/DropdownToggle"
                data-ouia-safe="true"
                id="pf-dropdown-toggle-id-3"
                type="button"
              >
                <span>
                  <img
                    alt="avatar"
                    class="pf-c-avatar"
                    src=""
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item pf-u-flex-1"
          >
            <div
              class="pf-c-text-input-group pf-c-search--main"
            >
              <div
                class="pf-c-text-input-group__main pf-m-icon"
              >
                <span
                  class="pf-c-text-input-group__text"
                >
                  <span
                    class="pf-c-text-input-group__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </span>
                  <input
                    aria-label="Search"
                    class="pf-c-text-input-group__text-input"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="Add a contact"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-3-expandable-content-3"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GlobalToolbar renders with add contact modal open 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-toolbar pf-m-sticky pf-u-m-0"
        data-ouia-component-id="OUIA-Generated-Toolbar-3"
        data-ouia-component-type="PF4/Toolbar"
        data-ouia-safe="true"
        id="pf-random-id-2"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__item pf-u-display-flex"
            >
              <div
                class="pf-c-dropdown pf-u-display-flex"
                data-ouia-component-id="OUIA-Generated-Dropdown-3"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Toggle account actions"
                  class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                  data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pf-dropdown-toggle-id-2"
                  type="button"
                >
                  <span>
                    <img
                      alt="avatar"
                      class="pf-c-avatar"
                      src=""
                    />
                  </span>
                </button>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item pf-u-flex-1"
            >
              <div
                class="pf-c-text-input-group pf-c-search--main"
              >
                <div
                  class="pf-c-text-input-group__main pf-m-icon"
                >
                  <span
                    class="pf-c-text-input-group__text"
                  >
                    <span
                      class="pf-c-text-input-group__icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        />
                      </svg>
                    </span>
                    <input
                      aria-label="Search"
                      class="pf-c-text-input-group__text-input"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                aria-label="Add a contact"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-random-id-2-expandable-content-2"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <div
          class="pf-c-toolbar__content pf-m-hidden"
          hidden=""
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-toolbar pf-m-sticky pf-u-m-0"
      data-ouia-component-id="OUIA-Generated-Toolbar-3"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-2"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item pf-u-display-flex"
          >
            <div
              class="pf-c-dropdown pf-u-display-flex"
              data-ouia-component-id="OUIA-Generated-Dropdown-3"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toggle account actions"
                class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
                data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
                data-ouia-component-type="PF4/DropdownToggle"
                data-ouia-safe="true"
                id="pf-dropdown-toggle-id-2"
                type="button"
              >
                <span>
                  <img
                    alt="avatar"
                    class="pf-c-avatar"
                    src=""
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item pf-u-flex-1"
          >
            <div
              class="pf-c-text-input-group pf-c-search--main"
            >
              <div
                class="pf-c-text-input-group__main pf-m-icon"
              >
                <span
                  class="pf-c-text-input-group__text"
                >
                  <span
                    class="pf-c-text-input-group__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </span>
                  <input
                    aria-label="Search"
                    class="pf-c-text-input-group__text-input"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="Add a contact"
              class="pf-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-2-expandable-content-2"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
